Issue #2304. [Admin OTG cabinet] Long email addresses are incompletely displayed on tabs "Заклади", "Історія змін". (#2307)
* first implementation of fixing the bug

* removed the truncation

--- a/src/app/shell/admin-tools/data/history-log/history-log-table/history-log-table.component.scss
+++ b/src/app/shell/admin-tools/data/history-log/history-log-table/history-log-table.component.scss
@@ -12,3 +12,7 @@
 .Rejected {
   color: #c72a21;
 }
+
+td {
+  word-break: break-word;
+}
